--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT=8000
 MONGO_URI=mongodb+srv://eranoren:cLWuQDAUvFiH3yVo@eorencluster.xdtuc.mongodb.net/?retryWrites=true&w=majority&appName=EorenCluster
 
 JWT_SECRET=super_secret_key
+
+REACT_APP_API_BASE_URL=http://localhost:8000/api
